2000-05-04  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-05-03  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-05-03  Pablo Saratxaga <pablo@mandrakesoft.com>

	* lt.po: Updated Lithuanian file

2000-04-30  Zbigniew Chyla  <chyla@buy.pl>
         
	* pl.po: Updated translation.

2000-04-29  Andreas Hyden  <a.hyden@cyberpoint.se>

	sv.po: Updated Swedish translation.

2000-04-29  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-04-29  Zbigniew Chyla  <chyla@buy.pl>
         
	* pl.po: Updated translation.

2000-04-28  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-04-25  Ruben Lopez <ryu@mundivia.es>

	* gl.po: Updated Galician translation.

2000-04-25  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sv.po: Updated Swedish translation.

2000-04-24  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-04-24  Arjan Scherpenisse  <Arjan Scherpenisse <acscherp@wins.uva.nl>

	* nl.po: Updated Dutch translation.

2000-04-20  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sv.po: Updated Swedish translation.

2000-04-20  Pablo Saratxaga <pablo@mandrakesoft.com>

	* lt.po: Updated Lithuanian file

2000-04-20  Fatih Demir	<kabalak@gmx.net>

	* tr.po : Updated it .

2000-04-19  Pablo Saratxaga <pablo@mandrakesoft.com>

	* ca.po: Added Catalan file

2000-04-18  Pablo Saratxaga <pablo@mandrakesoft.com>

	* da.po: Updated Danish file

2000-04-18  Valek Filippov <frob@df.ru>

	* ru.po: Updated russian translation.

2000-04-18  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sv.po: Updated Swedish translation.

2000-04-18  Matthias Warkus  <mawa@iname.com>

	* de.po: Updated.

2000-04-17  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-04-17  Yuri Syrota  <rasta@renome.rovno.ua>

	* uk.po: Updated Ukrainian translation.

2000-04-17  Andreas Hyden  <a.hyden@cyberpoint.se>
