@@ -1,3 +1,9 @@
+2000-05-07  Kenneth Christiansen  <kenneth@gnome.dk>
+
+	* update.sh: Updated update.sh to support
+          merging, --help, easier porting to new
+          packages, et al
+	
 2000-05-04  Kjartan Maraas  <kmaraas@online.no>
 
 	* no.po: Updated Norwegian translation.
